News UAT/force-app/main/default/objects/Creative_Services_Additional_Info__c/Creative_Services_Additional_Info__c.object-meta.xml
<CustomObject>
    <description>NLM custom object. 

MD relationship with Opportunity.</description>
    <label>Creative Services Usage Mandatories</label>
    <nameField>
        <displayFormat>CSA-{0000}</displayFormat>
        <label>CS Additional Info ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Creative Services Usage Mandatories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>