News UAT/force-app/main/default/objects/Creative_Services_Additional_Info__c/fields/Anything_the_client_doesn_t_want__c.field-meta.xml
<CustomField>
    <fullName>Anything_the_client_doesn_t_want__c</fullName>
    <label>Anything the client doesn&#39;t want?</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>