News UAT/force-app/main/default/objects/Creative_Services_Additional_Info__c/fields/Deliverable_Name__c.field-meta.xml
<CustomField>
    <fullName>Deliverable_Name__c</fullName>
    <formula>TEXT( Creative_Services_Deliverables__r.Deliverable__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deliverable Name</label>
    <type>Text</type>
</CustomField>