News UAT/force-app/main/default/objects/Creative_Services_Additional_Info__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <inlineHelpText>Time period vs buyout</inlineHelpText>
    <label>Duration</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>6 months</fullName>
            </value>
            <value>
                <fullName>12 months</fullName>
            </value>
            <value>
                <fullName>24 months</fullName>
            </value>
            <value>
                <fullName>In perpetuity</fullName>
            </value>
            <value>
                <fullName>Other (specify)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>