News UAT/force-app/main/default/objects/Creative_Services_Additional_Info__c/fields/Link_to_reference_material__c.field-meta.xml
<CustomField>
    <fullName>Link_to_reference_material__c</fullName>
    <inlineHelpText>e.g. brand guidelines, reference images</inlineHelpText>
    <label>Link to reference material</label>
    <type>Url</type>
</CustomField>