News UAT/force-app/main/default/objects/Creative_Services_Additional_Info__c/fields/Models_required__c.field-meta.xml
<CustomField>
    <fullName>Models_required__c</fullName>
    <label>Models required?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unsure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>