News UAT/force-app/main/default/objects/Creative_Services_Additional_Info__c/fields/Number_of_recipes__c.field-meta.xml
<CustomField>
    <fullName>Number_of_recipes__c</fullName>
    <label>Number of recipes</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>