News UAT/force-app/main/default/objects/Creative_Services_Additional_Info__c/fields/Recipes_required__c.field-meta.xml
<CustomField>
    <fullName>Recipes_required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recipes required?</label>
    <type>Checkbox</type>
</CustomField>