News UAT/force-app/main/default/objects/Creative_Services_Additional_Info__c/fields/Shoot_type__c.field-meta.xml
<CustomField>
    <fullName>Shoot_type__c</fullName>
    <inlineHelpText>What type of shoot is it?</inlineHelpText>
    <label>Shoot type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Food</fullName>
            </value>
            <value>
                <fullName>Fashion</fullName>
            </value>
            <value>
                <fullName>Interiors</fullName>
            </value>
            <value>
                <fullName>Lifestyle</fullName>
            </value>
            <value>
                <fullName>Flat-lay</fullName>
            </value>
            <value>
                <fullName>Jewellery</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>