News UAT/force-app/main/default/objects/Creative_Services_Additional_Info__c/fields/Usage_type__c.field-meta.xml
<CustomField>
    <fullName>Usage_type__c</fullName>
    <inlineHelpText>Where will the shots be appearing? Our mags? External mags? Online?</inlineHelpText>
    <label>Usage type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NLM Assets</fullName>
            </value>
            <value>
                <fullName>Client Assets</fullName>
            </value>
            <value>
                <fullName>NewsCorp Assets</fullName>
            </value>
            <value>
                <fullName>Other (specify)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>